--- a/reviews_sentiment_classifier.ipynb
+++ b/reviews_sentiment_classifier.ipynb
@@ -740,7 +740,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show_err=false; \n",
+       "function code_toggle_err() {\n",
+       " if (code_show_err){\n",
+       " $('div.output_stderr').hide();\n",
+       " } else {\n",
+       " $('div.output_stderr').show();\n",
+       " }\n",
+       " code_show_err = !code_show_err\n",
+       "} \n",
+       "$( document ).ready(code_toggle_err);\n",
+       "</script>\n",
+       "To toggle on/off output_stderr, click <a href=\"javascript:code_toggle_err()\">here</a>."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('''<script>\n",
+    "code_show_err=false; \n",
+    "function code_toggle_err() {\n",
+    " if (code_show_err){\n",
+    " $('div.output_stderr').hide();\n",
+    " } else {\n",
+    " $('div.output_stderr').show();\n",
+    " }\n",
+    " code_show_err = !code_show_err\n",
+    "} \n",
+    "$( document ).ready(code_toggle_err);\n",
+    "</script>\n",
+    "To toggle on/off output_stderr, click <a href=\"javascript:code_toggle_err()\">here</a>.''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
    "metadata": {
     "scrolled": false
    },
@@ -749,27 +797,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:44: SettingWithCopyWarning: \n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:52: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:45: SettingWithCopyWarning: \n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:53: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:46: SettingWithCopyWarning: \n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:54: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:47: SettingWithCopyWarning: \n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:55: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:48: SettingWithCopyWarning: \n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:56: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -780,10 +828,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classifier accuracy: 79.34%\n",
+      "Classifier accuracy: 78.79%\n",
       "Confusion matrix:\n",
-      "[[2752  772]\n",
-      " [ 660 2746]]\n"
+      "[[2732  792]\n",
+      " [ 678 2728]]\n"
      ]
     }
    ],
@@ -809,14 +857,22 @@
     "#             num_stopwords\n",
     "#             flesch_kincaid\n",
     "#             sentiment\n",
-    "            ('stops', Pipeline([\n",
-    "                ('selector', ItemSelector(key='num_stopwords')),\n",
-    "                ('rating_dict', CountVectorizer())\n",
-    "            ])),    \n",
-    "            ('sentiment', Pipeline([\n",
-    "                ('selector', ItemSelector(key='avg_len_tokens')),\n",
-    "                ('rating_dict', CountVectorizer())\n",
-    "            ])),             \n",
+    "#             ('flesch_kincaid', Pipeline([\n",
+    "#                 ('selector', ItemSelector(key='flesch_kincaid')),\n",
+    "#                 ('rating_dict', CountVectorizer())\n",
+    "#             ])),                \n",
+    "#             ('avg_len_tokens', Pipeline([\n",
+    "#                 ('selector', ItemSelector(key='avg_len_tokens')),\n",
+    "#                 ('rating_dict', CountVectorizer())\n",
+    "#             ])),               \n",
+    "#             ('stops', Pipeline([\n",
+    "#                 ('selector', ItemSelector(key='num_stopwords')),\n",
+    "#                 ('rating_dict', CountVectorizer())\n",
+    "#             ])),    \n",
+    "#             ('sentiment', Pipeline([\n",
+    "#                 ('selector', ItemSelector(key='avg_len_tokens')),\n",
+    "#                 ('rating_dict', CountVectorizer())\n",
+    "#             ])),             \n",
     "            ('rating', Pipeline([\n",
     "                ('selector', ItemSelector(key='rating')),\n",
     "                ('rating_dict', CountVectorizer())\n",
@@ -833,11 +889,11 @@
     "data_2 = data[['review_text', 'rating', 'verified_purchase', 'avg_len_tokens', 'pr_category', 'num_stopwords', 'flesch_kincaid', 'sentiment', 'label']]\n",
     "data_2['rating'] = data.apply(lambda row: 'rating_' + str(row['rating']), axis=1)\n",
     "data_2['verified_purchase'] = data.apply(lambda row: 'verified_' + str(row['verified_purchase']), axis=1)\n",
-    "data_2['avg_len_tokens'] = data.apply(lambda row: 'avg_token_' + str(round(row['avg_len_tokens'], 0)), axis=1)\n",
+    "data_2['avg_len_tokens'] = data.apply(lambda row: 'avg_token_' + str(int(round(row['avg_len_tokens'], 0))), axis=1)\n",
     "data_2['num_stopwords'] = data.apply(lambda row: 'num_stop_' + str(row['num_stopwords']), axis=1)\n",
     "data_2['flesch_kincaid'] = data.apply(lambda row: 'fk_' + str(round(row['flesch_kincaid'], 0)), axis=1)\n",
     "X_train, X_test, y_train, y_test = train_test_split( \\\n",
-    "                                                    data_2[['review_text', 'rating', 'pr_category', 'verified_purchase', 'num_stopwords', 'avg_len_tokens']], \\\n",
+    "                                                    data_2[['review_text', 'rating', 'avg_len_tokens', 'pr_category', 'verified_purchase', 'num_stopwords', 'avg_len_tokens']], \\\n",
     "                                                    data_2['label'], \\\n",
     "                                                    test_size=0.33, \\\n",
     "                                                    random_state=1\n",
@@ -855,11 +911,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier accuracy: 79.52%\n",
+      "Confusion matrix:\n",
+      "[[2672  852]\n",
+      " [ 567 2839]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# data.head()"
+    "pipeline = Pipeline([\n",
+    "    # Use FeatureUnion to combine the features from subject and body\n",
+    "    ('union', FeatureUnion(\n",
+    "        transformer_list=[\n",
+    "            ('review_text_tfidf', Pipeline([\n",
+    "                ('selector', ItemSelector(key='review_text')),\n",
+    "                ('count_dict', TfidfVectorizer(stop_words=\"english\")),\n",
+    "            ])),  \n",
+    "            ('pr_category', Pipeline([\n",
+    "                ('selector', ItemSelector(key='pr_category')),\n",
+    "                ('count_dict', CountVectorizer(stop_words=\"english\")),\n",
+    "            ])),       \n",
+    "            ('rating', Pipeline([\n",
+    "                ('selector', ItemSelector(key='rating')),\n",
+    "                ('rating_dict', CountVectorizer())\n",
+    "            ])),\n",
+    "            ('verified_purchase', Pipeline([\n",
+    "                ('selector', ItemSelector(key='verified_purchase')),\n",
+    "                ('verified_dict', CountVectorizer())\n",
+    "            ]))\n",
+    "        ]\n",
+    "    )),\n",
+    "    ('classifier', MultinomialNB(alpha=0.3))\n",
+    "])\n",
+    "\n",
+    "data_2 = data[['review_text', 'rating', 'verified_purchase', 'pr_category', 'label']]\n",
+    "data_2['rating'] = data.apply(lambda row: 'rating_' + str(row['rating']), axis=1)\n",
+    "data_2['verified_purchase'] = data.apply(lambda row: 'verified_' + str(row['verified_purchase']), axis=1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split( \\\n",
+    "                                                    data_2[['review_text', 'rating', 'pr_category', 'verified_purchase']], \\\n",
+    "                                                    data_2['label'], \\\n",
+    "                                                    test_size=0.33, \\\n",
+    "                                                    random_state=1\n",
+    "                                                    )\n",
+    "\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "pred = pipeline.predict(X_test)\n",
+    "score = metrics.accuracy_score(y_test, pred)\n",
+    "print('Classifier accuracy: ' + str(round(100*score, 2)) + '%')\n",
+    "cm = metrics.confusion_matrix(y_test, pred, labels=['fake', 'real'])\n",
+    "print('Confusion matrix:')\n",
+    "print(cm)"
    ]
   },
   {
